--- a/ansible/deployed_files/docker-compose.yml
+++ b/ansible/deployed_files/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: alpine/openssl:3.5.2
     volumes:
       - rsakeys:/keys
-    entrypoint: ["/bin/ash"]
+    entrypoint: ["/bin/bash"]
     command: ["-c", "if [ ! -f /keys/private_key.pem ]; then openssl genpkey -algorithm RSA -out /keys/private_key.pem -pkeyopt rsa_keygen_bits:4096; fi && tail -f /dev/null"]
     healthcheck:
       test: ["CMD", "test", "-f", "/keys/private_key.pem"]
@@ -83,7 +83,7 @@ services:
       timeout: 30s
       retries: 3
   opencti:
-    image: opencti/platform:6.8.2
+    image: opencti/platform:6.8.6
     environment:
       - NODE_OPTIONS=--max-old-space-size=8096
       - APP__PORT=8080
@@ -112,7 +112,7 @@ services:
       - PROVIDERS__LOCAL__STRATEGY=LocalStrategy
       - APP__HEALTH_ACCESS_KEY=${OPENCTI_HEALTHCHECK_ACCESS_KEY}
     ports:
-      - "0.0.0.0:8080:8080"
+      - "127.0.0.1:8080:8080"
     depends_on:
       redis:
         condition: service_healthy
@@ -129,7 +129,7 @@ services:
       timeout: 5s
       retries: 20
   worker:
-    image: opencti/worker:6.8.2
+    image: opencti/worker:6.8.6
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -142,7 +142,7 @@ services:
       replicas: 3
     restart: always
   connector-export-file-stix:
-    image: opencti/connector-export-file-stix:6.8.2
+    image: opencti/connector-export-file-stix:6.8.6
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -156,7 +156,7 @@ services:
       opencti:
         condition: service_healthy
   connector-export-file-csv:
-    image: opencti/connector-export-file-csv:6.8.2
+    image: opencti/connector-export-file-csv:6.8.6
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -170,7 +170,7 @@ services:
       opencti:
         condition: service_healthy
   connector-export-file-txt:
-    image: opencti/connector-export-file-txt:6.8.2
+    image: opencti/connector-export-file-txt:6.8.6
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -184,7 +184,7 @@ services:
       opencti:
         condition: service_healthy
   connector-import-file-stix:
-    image: opencti/connector-import-file-stix:6.8.2
+    image: opencti/connector-import-file-stix:6.8.6
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -200,7 +200,7 @@ services:
       opencti:
         condition: service_healthy
   connector-import-document:
-    image: opencti/connector-import-document:6.8.2
+    image: opencti/connector-import-document:6.8.6
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
